# edge-orchestrator

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  RUNBOOK.md  plan.md
.github/workflows/: ci.yml
configs/: linux-node.yaml  mac-node.yaml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: handler.rs  lib.rs  server.rs
crates/node/: Cargo.toml
crates/node/src/: bootstrap.rs  cli.rs  config.rs  main.rs  signals.rs
crates/orchestration/: Cargo.toml
crates/orchestration/src/: lib.rs  reporter.rs  role_engine.rs  scheduler.rs  topology.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: behaviour.rs  discovery.rs  lib.rs  protocol.rs  swarm.rs  transport.rs
crates/p2p/tests/: p2p_discovery.rs
crates/raft/: Cargo.toml
crates/raft/src/: lib.rs  network.rs  node.rs  proposal.rs  state_machine.rs  storage.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: container.rs  lib.rs  registry.rs  wasm.rs
crates/storage/: Cargo.toml
crates/storage/src/: diff.rs  index.rs  lib.rs  objects.rs  store.rs  transport.rs
eo-agent/: pyproject.toml
eo-agent/src/eo_agent/: __init__.py  client.py  graph.py  keyring.py  llm_config.py  main.py  nodes.py  state.py  tools.py
eo-agent/tests/: test_graph.py  test_tools.py
scripts/: node_extension.yaml  run_node_linux.sh  run_node_mac.sh  setup_env.sh
