[package]
name = "eo-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eo-core.workspace = true
eo-raft = { path = "../raft" }
storage = { path = "../storage" }
sandbox = { path = "../sandbox" }
orchestration = { path = "../orchestration" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid = { version = "1", features = ["v4"] }
bytes = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
