[package]
name = "orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eo-core.workspace = true
eo-raft = { path = "../raft" }
p2p = { path = "../p2p" }
sandbox = { path = "../sandbox" }
storage = { path = "../storage" }

serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
