[package]
name = "p2p"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eo-core.workspace = true

libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "request-response",
    "identify",
    "ping",
    "macros",
] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
