[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eo-core.workspace = true

sha2 = "0.10"
hex = "0.4"
flate2 = "1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir = "2"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
